# AKReport

./: .gitignore  README.md  _test_search.py  startup.bat  startup.sh  股票导入模板.xlsx
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py  models.py
backend/app/api/: exception_handlers.py  health.py  import_.py  open_file.py  reports.py  settings.py  stock_history.py  stocks.py  tasks.py
backend/app/services/: akshare_client.py  cninfo_client.py  downloader.py  excel_importer.py  filename.py  rate_limiter.py  report_matcher.py  task_queue.py
backend/app/storage/: database.py  repositories.py
backend/app/tests/: test_config.py  test_downloader.py  test_rate_limiter.py  test_report_matcher.py  test_stock_history.py
backend/data/: app.sqlite3-shm  app.sqlite3-wal
docs/: 前端开发文档.md  后端开发文档.md  开发规范.md  财报PDF下载工具开发文档.md  项目进度.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts  events.test.ts  events.ts  types.ts
frontend/src/components/: RequestSettings.test.tsx  RequestSettings.tsx
frontend/src/state/: taskReducer.test.ts  taskReducer.ts
frontend/src/utils/: codeInput.test.ts  codeInput.ts  platform.test.ts  platform.ts
